--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.0
+  simple_animations: 1.3.12
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +25,28 @@ flutter:
   assets:
     - assets/
     - assets/images/
+
+  fonts:
+    - family: Gilroy Bold
+      fonts:
+        - asset: assets/fonts/Gilroy-Bold.ttf
+
+    - family: Gilroy Bold Italic
+      fonts:
+        - asset: assets/fonts/Gilroy-BoldItalic.ttf
+
+    - family: Gilroy Italic
+      fonts:
+        - asset: assets/fonts/Gilroy-Italic.ttf
+
+    - family: Gilroy Medium
+      fonts:
+        - asset: assets/fonts/Gilroy-Medium.ttf
+
+    - family: Gilroy Medium Italic
+      fonts:
+        - asset: assets/fonts/Gilroy-MediumItalic.ttf
+
+    - family: Gilroy Regular
+      fonts:
+        - asset: assets/fonts/Gilroy-Regular.ttf
