--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
 
   cupertino_icons: ^1.0.0
   simple_animations: 1.3.12
+  fluttertoast: 7.1.8
+  vibration: 1.7.3
+  pin_view: 1.0.1
 
 dev_dependencies:
   flutter_test:
