--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   fluttertoast: 7.1.8
   vibration: 1.7.3
   pin_view: 1.0.1
+  font_awesome_flutter: 8.12.0
 
 dev_dependencies:
   flutter_test:
